# X410Launcher

./: X410Launcher.sln  X410Launcher.slnx
Launcher/: Launcher.cpp  Launcher.vcxproj  vcpkg.json
X410/: X410.cpp  X410.vcxproj  X410.vcxproj.filters  restore_context_arm64.asm  restore_context_x64.asm  vcpkg.json
X410Launcher/: X410Launcher.args.json  X410Launcher.csproj
X410Launcher/Native/: Launcher.cpp
X410Launcher/Native/Launcher/: CMakeLists.txt  Launcher.cpp  gen.bat
X410Launcher/Native/X410/: CMakeLists.txt  X410.cpp  build-arm64.bat  build.bat  gen-arm64.bat  gen.bat
X410Launcher/Properties/: launchSettings.json
X410Launcher/Tools/: Launcher.cs  MicrosoftStoreAppFetcher.cs  Paths.cs
X410Launcher/UI/Pages/: HomePage.xaml  HomePage.xaml.cs
X410Launcher/ViewModels/: X410StatusViewModel.cs
